--- a/stanford-languagemodel-machinetranslation-attention.ipynb
+++ b/stanford-languagemodel-machinetranslation-attention.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Language-model\" data-toc-modified-id=\"Language-model-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Language model</a></span></li><li><span><a href=\"#Machine-translation\" data-toc-modified-id=\"Machine-translation-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Machine translation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Statistical-machine-translation\" data-toc-modified-id=\"Statistical-machine-translation-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Statistical machine translation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Learn-the-translation-model\" data-toc-modified-id=\"Learn-the-translation-model-2.1.1\"><span class=\"toc-item-num\">2.1.1&nbsp;&nbsp;</span>Learn the translation model</a></span></li><li><span><a href=\"#How-to-compute-argmax?\" data-toc-modified-id=\"How-to-compute-argmax?-2.1.2\"><span class=\"toc-item-num\">2.1.2&nbsp;&nbsp;</span>How to compute argmax?</a></span></li><li><span><a href=\"#Cons-of-statistical-machine-translation\" data-toc-modified-id=\"Cons-of-statistical-machine-translation-2.1.3\"><span class=\"toc-item-num\">2.1.3&nbsp;&nbsp;</span>Cons of statistical machine translation</a></span></li></ul></li><li><span><a href=\"#Neural-machine-translation\" data-toc-modified-id=\"Neural-machine-translation-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Neural machine translation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Definition\" data-toc-modified-id=\"Definition-2.2.1\"><span class=\"toc-item-num\">2.2.1&nbsp;&nbsp;</span>Definition</a></span></li><li><span><a href=\"#A-CONDITIONAL-LANGUAGE-MODEL\" data-toc-modified-id=\"A-CONDITIONAL-LANGUAGE-MODEL-2.2.2\"><span class=\"toc-item-num\">2.2.2&nbsp;&nbsp;</span>A CONDITIONAL LANGUAGE MODEL</a></span></li><li><span><a href=\"#How-to-train-these-2-RNNs\" data-toc-modified-id=\"How-to-train-these-2-RNNs-2.2.3\"><span class=\"toc-item-num\">2.2.3&nbsp;&nbsp;</span>How to train these 2 RNNs</a></span></li><li><span><a href=\"#Beam-search-for-neural-translation-inference-(test-time)\" data-toc-modified-id=\"Beam-search-for-neural-translation-inference-(test-time)-2.2.4\"><span class=\"toc-item-num\">2.2.4&nbsp;&nbsp;</span>Beam search for neural translation inference (test time)</a></span></li><li><span><a href=\"#Stopping-criterion-for-beam-search-+-pick-the-best-hypotheses\" data-toc-modified-id=\"Stopping-criterion-for-beam-search-+-pick-the-best-hypotheses-2.2.5\"><span class=\"toc-item-num\">2.2.5&nbsp;&nbsp;</span>Stopping criterion for beam search + pick the best hypotheses</a></span></li></ul></li><li><span><a href=\"#Pros-and-cons-of-neural-MT-over-statistical-MT\" data-toc-modified-id=\"Pros-and-cons-of-neural-MT-over-statistical-MT-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Pros and cons of neural MT over statistical MT</a></span></li></ul></li><li><span><a href=\"#Attention\" data-toc-modified-id=\"Attention-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Attention</a></span><ul class=\"toc-item\"><li><span><a href=\"#Definition\" data-toc-modified-id=\"Definition-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Definition</a></span></li><li><span><a href=\"#Steps\" data-toc-modified-id=\"Steps-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Steps</a></span></li><li><span><a href=\"#math-equation\" data-toc-modified-id=\"math-equation-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>math equation</a></span></li><li><span><a href=\"#Pros-of-using-attention\" data-toc-modified-id=\"Pros-of-using-attention-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Pros of using attention</a></span></li><li><span><a href=\"#General-definition-of-attention\" data-toc-modified-id=\"General-definition-of-attention-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>General definition of attention</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Language model"
@@ -517,7 +527,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "237.55px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
