--- a/fastai2_huggingface_nlp/fastai_vnmese_lm_and_sentiment_full_run_v2.ipynb
+++ b/fastai2_huggingface_nlp/fastai_vnmese_lm_and_sentiment_full_run_v2.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Prepare-df\" data-toc-modified-id=\"Prepare-df-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Prepare df</a></span></li><li><span><a href=\"#Build-LM-wiki\" data-toc-modified-id=\"Build-LM-wiki-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Build LM wiki</a></span><ul class=\"toc-item\"><li><span><a href=\"#LM-learner\" data-toc-modified-id=\"LM-learner-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>LM learner</a></span><ul class=\"toc-item\"><li><span><a href=\"#define-learner\" data-toc-modified-id=\"define-learner-2.1.1\"><span class=\"toc-item-num\">2.1.1&nbsp;&nbsp;</span>define learner</a></span></li><li><span><a href=\"#Start-training\" data-toc-modified-id=\"Start-training-2.1.2\"><span class=\"toc-item-num\">2.1.2&nbsp;&nbsp;</span>Start training</a></span></li><li><span><a href=\"#Re-check-learnable-parameters\" data-toc-modified-id=\"Re-check-learnable-parameters-2.1.3\"><span class=\"toc-item-num\">2.1.3&nbsp;&nbsp;</span>Re-check learnable parameters</a></span></li><li><span><a href=\"#Save-model\" data-toc-modified-id=\"Save-model-2.1.4\"><span class=\"toc-item-num\">2.1.4&nbsp;&nbsp;</span>Save model</a></span></li></ul></li></ul></li><li><span><a href=\"#Finetuning-LM-with-sentiment-analysis-data\" data-toc-modified-id=\"Finetuning-LM-with-sentiment-analysis-data-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Finetuning LM with sentiment analysis data</a></span><ul class=\"toc-item\"><li><span><a href=\"#prepare-datablock-and-dataloaders\" data-toc-modified-id=\"prepare-datablock-and-dataloaders-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>prepare datablock and dataloaders</a></span></li><li><span><a href=\"#Load-params-and-vocab\" data-toc-modified-id=\"Load-params-and-vocab-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Load params and vocab</a></span></li><li><span><a href=\"#training\" data-toc-modified-id=\"training-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>training</a></span></li></ul></li><li><span><a href=\"#Sentiment-classification\" data-toc-modified-id=\"Sentiment-classification-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Sentiment classification</a></span><ul class=\"toc-item\"><li><span><a href=\"#prepare-text-clas-datablock-and-dataloaders\" data-toc-modified-id=\"prepare-text-clas-datablock-and-dataloaders-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>prepare text clas datablock and dataloaders</a></span></li><li><span><a href=\"#Training\" data-toc-modified-id=\"Training-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Training</a></span><ul class=\"toc-item\"><li><span><a href=\"#define-sentiment-clas-learner\" data-toc-modified-id=\"define-sentiment-clas-learner-4.2.1\"><span class=\"toc-item-num\">4.2.1&nbsp;&nbsp;</span>define sentiment clas learner</a></span></li><li><span><a href=\"#training\" data-toc-modified-id=\"training-4.2.2\"><span class=\"toc-item-num\">4.2.2&nbsp;&nbsp;</span>training</a></span></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Prepare-df\" data-toc-modified-id=\"Prepare-df-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Prepare df</a></span></li><li><span><a href=\"#Build-LM-wiki\" data-toc-modified-id=\"Build-LM-wiki-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Build LM wiki</a></span><ul class=\"toc-item\"><li><span><a href=\"#LM-learner\" data-toc-modified-id=\"LM-learner-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>LM learner</a></span><ul class=\"toc-item\"><li><span><a href=\"#define-learner\" data-toc-modified-id=\"define-learner-2.1.1\"><span class=\"toc-item-num\">2.1.1&nbsp;&nbsp;</span>define learner</a></span></li><li><span><a href=\"#Start-training\" data-toc-modified-id=\"Start-training-2.1.2\"><span class=\"toc-item-num\">2.1.2&nbsp;&nbsp;</span>Start training</a></span></li><li><span><a href=\"#Save-model\" data-toc-modified-id=\"Save-model-2.1.3\"><span class=\"toc-item-num\">2.1.3&nbsp;&nbsp;</span>Save model</a></span></li></ul></li></ul></li><li><span><a href=\"#Finetuning-LM-with-sentiment-analysis-data\" data-toc-modified-id=\"Finetuning-LM-with-sentiment-analysis-data-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Finetuning LM with sentiment analysis data</a></span><ul class=\"toc-item\"><li><span><a href=\"#prepare-datablock-and-dataloaders\" data-toc-modified-id=\"prepare-datablock-and-dataloaders-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>prepare datablock and dataloaders</a></span></li><li><span><a href=\"#Load-params-and-vocab\" data-toc-modified-id=\"Load-params-and-vocab-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Load params and vocab</a></span></li><li><span><a href=\"#training\" data-toc-modified-id=\"training-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>training</a></span></li></ul></li><li><span><a href=\"#Sentiment-classification\" data-toc-modified-id=\"Sentiment-classification-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Sentiment classification</a></span><ul class=\"toc-item\"><li><span><a href=\"#prepare-text-clas-datablock-and-dataloaders\" data-toc-modified-id=\"prepare-text-clas-datablock-and-dataloaders-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>prepare text clas datablock and dataloaders</a></span></li><li><span><a href=\"#Training\" data-toc-modified-id=\"Training-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Training</a></span><ul class=\"toc-item\"><li><span><a href=\"#define-sentiment-clas-learner\" data-toc-modified-id=\"define-sentiment-clas-learner-4.2.1\"><span class=\"toc-item-num\">4.2.1&nbsp;&nbsp;</span>define sentiment clas learner</a></span></li><li><span><a href=\"#training\" data-toc-modified-id=\"training-4.2.2\"><span class=\"toc-item-num\">4.2.2&nbsp;&nbsp;</span>training</a></span></li></ul></li></ul></li></ul></div>"
    ]
   },
   {
@@ -82,10 +82,10 @@
     }
    ],
    "source": [
-    "mdl_path = path/'models'\n",
-    "print(mdl_path)\n",
-    "mdl_path.mkdir(exist_ok=True)\n",
-    "lm_fns = [f'vi_wt', f'vi_wt_vocab']"
+    "# mdl_path = path/'models'\n",
+    "# print(mdl_path)\n",
+    "# mdl_path.mkdir(exist_ok=True)\n",
+    "# lm_fns = [f'vi_wt', f'vi_wt_vocab']"
    ]
   },
   {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "82346"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "0.05333333333333333"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "(fastai.text.learner.LMLearner, fastai.text.models.core.SequentialRNN)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "2"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,6 +515,130 @@
    "metadata": {},
    "source": [
     "### Start training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>perplexity</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>3.739719</td>\n",
+       "      <td>3.662289</td>\n",
+       "      <td>0.338946</td>\n",
+       "      <td>38.950413</td>\n",
+       "      <td>56:04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>3.800560</td>\n",
+       "      <td>3.711613</td>\n",
+       "      <td>0.335228</td>\n",
+       "      <td>40.919773</td>\n",
+       "      <td>56:04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3.706933</td>\n",
+       "      <td>3.631249</td>\n",
+       "      <td>0.342857</td>\n",
+       "      <td>37.759949</td>\n",
+       "      <td>55:37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3.613249</td>\n",
+       "      <td>3.568112</td>\n",
+       "      <td>0.350157</td>\n",
+       "      <td>35.449596</td>\n",
+       "      <td>55:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>3.548833</td>\n",
+       "      <td>3.499429</td>\n",
+       "      <td>0.356900</td>\n",
+       "      <td>33.096539</td>\n",
+       "      <td>55:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>3.498598</td>\n",
+       "      <td>3.421560</td>\n",
+       "      <td>0.364736</td>\n",
+       "      <td>30.617142</td>\n",
+       "      <td>55:24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>3.448882</td>\n",
+       "      <td>3.324600</td>\n",
+       "      <td>0.375716</td>\n",
+       "      <td>27.787888</td>\n",
+       "      <td>55:16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>3.312769</td>\n",
+       "      <td>3.221702</td>\n",
+       "      <td>0.386235</td>\n",
+       "      <td>25.070751</td>\n",
+       "      <td>55:11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>3.238319</td>\n",
+       "      <td>3.113604</td>\n",
+       "      <td>0.398766</td>\n",
+       "      <td>22.501991</td>\n",
+       "      <td>55:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>3.178566</td>\n",
+       "      <td>3.021445</td>\n",
+       "      <td>0.409993</td>\n",
+       "      <td>20.520914</td>\n",
+       "      <td>55:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>3.115807</td>\n",
+       "      <td>2.986831</td>\n",
+       "      <td>0.414585</td>\n",
+       "      <td>19.822763</td>\n",
+       "      <td>55:21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "learn.fit_one_cycle(11, lr, moms=(0.8,0.7,0.8))"
    ]
   },
   {
@@ -662,7 +786,7 @@
    ],
    "source": [
     "\n",
-    "learn.fit_one_cycle(3, lr, moms=(0.8,0.7,0.8))"
+    "# learn.fit_one_cycle(3, lr, moms=(0.8,0.7,0.8))"
    ]
   },
   {
@@ -729,90 +853,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Re-check learnable parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# learn.opt.state_dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(learn.opt.state_dict()['state']) # save grad_avg and sqr_avg?? for each learnable params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[-0.0336, -0.0886,  0.0438,  ...,  0.0551,  0.0465, -0.1152],\n",
-       "        [-0.0913,  0.0067, -0.0356,  ...,  0.0381, -0.0388,  0.0329],\n",
-       "        [ 0.2615,  0.1244, -0.0529,  ...,  0.0577,  0.0020, -0.1857],\n",
-       "        ...,\n",
-       "        [-0.0458, -0.0353, -0.0734,  ..., -0.0265,  0.0467, -0.0379],\n",
-       "        [-0.0700,  0.0169,  0.0028,  ...,  0.0447,  0.0649,  0.0274],\n",
-       "        [-0.0097,  0.0284, -0.0868,  ..., -0.0103, -0.0008,  0.0188]],\n",
-       "       device='cuda:0')"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "learn.model[0].encoder.weight.data # weight is updated everywhere. Good!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Save model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Path('/home/quan/.fastai/data/viwiki/models')"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mdl_path"
    ]
   },
   {
@@ -821,18 +862,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['vi_wt', 'vi_wt_vocab']"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/quan/.fastai/data/viwiki/models_2\n"
+     ]
     }
    ],
    "source": [
-    "lm_fns"
+    "mdl_path = path/'models_2'\n",
+    "print(mdl_path)\n",
+    "mdl_path.mkdir(exist_ok=True)"
    ]
   },
   {
@@ -843,10 +883,50 @@
     {
      "data": {
       "text/plain": [
-       "Path('/home/quan/.fastai/data/viwiki/models/vi_wt.pth')"
+       "Path('/home/quan/.fastai/data/viwiki/models_2')"
       ]
      },
      "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mdl_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['vi_wt', 'vi_wt_vocab']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lm_fns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Path('/home/quan/.fastai/data/viwiki/models_2/vi_wt.pth')"
+      ]
+     },
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,18 +938,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "if os.path.isfile(mdl_path/(lm_fns[1] + '.pkl')):\n",
     "    os.remove(mdl_path/(lm_fns[1] + '.pkl'))\n",
-    "#     print(True)"
+    "    print(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +958,7 @@
        "60008"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2610,17 +2690,12 @@
    "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
-   "sideBar": true,
+   "sideBar": false,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": true,
-   "toc_position": {
-    "height": "calc(100% - 180px)",
-    "left": "10px",
-    "top": "150px",
-    "width": "298.55px"
-   },
+   "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
   },
