add more stuff for v2, add v2 backward

--- a/fastai2_huggingface_nlp/fastai_vnmese_lm_and_sentiment_full_run_v2_backward.ipynb
+++ b/fastai2_huggingface_nlp/fastai_vnmese_lm_and_sentiment_full_run_v2_backward.ipynb
@@ -70,22 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/quan/.fastai/data/viwiki/models\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# mdl_path = path/'models'\n",
     "# print(mdl_path)\n",
     "# mdl_path.mkdir(exist_ok=True)\n",
-    "# lm_fns = [f'vi_wt', f'vi_wt_vocab']"
+    "lm_fns = [f'vi_wt', f'vi_wt_vocab']"
    ]
   },
   {
@@ -559,30 +551,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "\n",
-       "    <div>\n",
-       "        <style>\n",
-       "            /* Turns off some styling */\n",
-       "            progress {\n",
-       "                /* gets rid of default border in Firefox and Opera. */\n",
-       "                border: none;\n",
-       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-       "                background-size: auto;\n",
-       "            }\n",
-       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-       "                background: #F44336;\n",
-       "            }\n",
-       "        </style>\n",
-       "      <progress value='6' class='' max='10' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      60.00% [6/10 5:59:37<3:59:44]\n",
-       "    </div>\n",
-       "    \n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: left;\">\n",
@@ -643,26 +617,40 @@
        "      <td>24.918673</td>\n",
        "      <td>1:00:58</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>3.273931</td>\n",
+       "      <td>3.140243</td>\n",
+       "      <td>0.424761</td>\n",
+       "      <td>23.109478</td>\n",
+       "      <td>59:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>3.181108</td>\n",
+       "      <td>3.070807</td>\n",
+       "      <td>0.432739</td>\n",
+       "      <td>21.559288</td>\n",
+       "      <td>59:28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>3.176138</td>\n",
+       "      <td>3.018408</td>\n",
+       "      <td>0.439315</td>\n",
+       "      <td>20.458702</td>\n",
+       "      <td>59:25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>3.135471</td>\n",
+       "      <td>3.003750</td>\n",
+       "      <td>0.441334</td>\n",
+       "      <td>20.161001</td>\n",
+       "      <td>59:29</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
-       "</table><p>\n",
-       "\n",
-       "    <div>\n",
-       "        <style>\n",
-       "            /* Turns off some styling */\n",
-       "            progress {\n",
-       "                /* gets rid of default border in Firefox and Opera. */\n",
-       "                border: none;\n",
-       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-       "                background-size: auto;\n",
-       "            }\n",
-       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-       "                background: #F44336;\n",
-       "            }\n",
-       "        </style>\n",
-       "      <progress value='2610' class='' max='6240' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      41.83% [2610/6240 20:50<28:59 3.2934]\n",
-       "    </div>\n",
-       "    "
+       "</table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -685,9 +673,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/quan/.fastai/data/viwiki/models_backward/models\n"
+     ]
+    }
+   ],
    "source": [
     "mdl_path = path/'models_backward'/'models'\n",
     "print(mdl_path)\n",
@@ -696,27 +692,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Path('/home/quan/.fastai/data/viwiki/models_backward/models')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mdl_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['vi_wt', 'vi_wt_vocab']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lm_fns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Path('/home/quan/.fastai/data/viwiki/models_backward/models/vi_wt.pth')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "learn.to_fp32().save(mdl_path/lm_fns[0], with_opt=False) \n",
     "# save the state_dict (all possible learnable parameters)"
@@ -724,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,16 +764,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60008"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(learn.dls.vocab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
