--- a/fastai2_huggingface_nlp/fastai_vnmese_lm_and_sentiment_full_run_v2.ipynb
+++ b/fastai2_huggingface_nlp/fastai_vnmese_lm_and_sentiment_full_run_v2.ipynb
@@ -2690,12 +2690,17 @@
    "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
-   "sideBar": false,
+   "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": true,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "349.091px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   },
