add tfmers from v.ai

--- a/fastai2_huggingface_nlp/fastai_vnmese_lm_and_sentiment_details.ipynb
+++ b/fastai2_huggingface_nlp/fastai_vnmese_lm_and_sentiment_details.ipynb
@@ -1692,18 +1692,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## LM learner"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### define learner"
    ]
@@ -1711,9 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn = language_model_learner(dls, \n",
@@ -1727,9 +1721,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1751,9 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1773,9 +1763,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1795,9 +1783,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1843,9 +1829,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn.unfreeze() # == learn.opt.freeze_to(0)"
@@ -1854,9 +1838,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1876,9 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1911,10 +1891,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Param groups and weight shapes"
    ]
@@ -1922,9 +1899,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1944,9 +1919,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1980,9 +1953,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2002,9 +1973,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2044,9 +2013,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2072,9 +2039,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2100,9 +2065,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2123,9 +2086,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2152,9 +2113,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2175,9 +2134,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2197,9 +2154,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2219,18 +2174,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2250,9 +2201,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2273,9 +2222,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2301,9 +2248,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Weights of an LSTM unidirectional"
    ]
@@ -2311,9 +2256,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "temp = nn.LSTM(400, 1152, bias=True, bidirectional=False)"
@@ -2322,9 +2265,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2367,9 +2308,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2396,9 +2335,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2418,18 +2355,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2456,9 +2389,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2485,9 +2416,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2507,8 +2436,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### quick review on slice"
@@ -2675,9 +2603,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Start training"
    ]
@@ -2685,9 +2611,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2731,9 +2655,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2793,9 +2715,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2855,9 +2775,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2916,9 +2834,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Re-check learnable parameters"
    ]
@@ -2926,9 +2842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# learn.opt.state_dict()"
@@ -2937,9 +2851,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2959,9 +2871,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2987,9 +2897,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Save model"
    ]
@@ -2997,9 +2905,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3019,9 +2925,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3041,9 +2945,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3064,9 +2966,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if os.path.isfile(mdl_path/(lm_fns[1] + '.pkl')):\n",
@@ -3077,9 +2977,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3099,9 +2997,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open(mdl_path/(lm_fns[1] + '.pkl'), 'wb') as f:\n",
@@ -3111,17 +3007,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### try drop_mult 0.5"
@@ -3243,8 +3136,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### try original wikitext param training"
@@ -6309,7 +6201,7 @@
     "width": "298.55px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
