--- a/stanford-contextual-word-representation-transformer.ipynb
+++ b/stanford-contextual-word-representation-transformer.ipynb
@@ -729,6 +729,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Why can't we use batchnorm:\n",
+    "- When calculating mean and std of a batch in batchnorm, we assume that item in batch has the same size (e.g. img with same h,w,channels). \n",
+    "- In RNN, sentences in a batch can have different length (Although this can be fixed with padding, but by adding padding, it can alter the true meaning of mean and std of that batch)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/layernorm_rnn.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Layer norm formula is essentially the same as batchnorm, but\n",
     "- calculated for EACH TRAINING POINT\n",
     "- No moving average\n",
@@ -798,14 +814,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Token embeddings and tie-weight (weight sharing)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- Similarly to other sequence transduction models, we use learned embeddings to convert the **input tokens** (of encoder) and **output tokens** (of decoder) to **vectors of dimension  d_model**\n",
     "- We also use the usual learned linear transformation and softmax function to convert the decoder output to predicted next-token probabilities. \n",
@@ -815,7 +835,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "In AWD-LSTM language model, tie_weights will make embedding weight == last layer linear weight. \n",
     "\n",
@@ -842,7 +864,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# see code in Full Model section\n",
@@ -852,28 +876,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Positional encoding"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Based on this: https://arxiv.org/pdf/1705.03122.pdf"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Relative vs Absolute Position"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- Absolute position: position of words w.r.t to the start of the sentence\n",
     "- Relative position: position of words w.r.t to some chosen word in the sentence"
@@ -881,14 +913,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Learnable positional encoding"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- Learned just like word embedding matrix: We will create a matrix of shape ```[sentence_length,vector_size]```. In short, each positon (position of 1st word, position of 2nd word ...) will be presented by a vector\n",
     "- BERT use learned positional encoding"
@@ -896,14 +932,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Function-based positional encoding"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- in order for the model to make use of the order of the sequence, we must inject some information about the relative or absolute position of the tokens in the sequence\n",
     "- The positional encodings have the same dimension d_model as the embeddings, so that the two can be summed\n",
@@ -912,14 +952,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/selfattention_4.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "This mean the first few dimension will oscillate faster than later dimension (as seen below: dimension 6 is wider than 4 (for even dimension using sin) and also wider than 5; dimension 7 is wider than 5 (for odd dimension using cosine) and also wider than 4 and 6\n",
     "\n",
@@ -937,42 +981,54 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/selfattention_5.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/signusoid2.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Create a matrix to show distances between word emb vectors after adding the sinusoid function (for first row aka word #0, color is lighter aka distance is bigger when going right)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/selfattention_6.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/signusoid.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Note for above graph:\n",
     "- Only the first few dimension of embedding vector represents position (after 200, not much differences) => therefore, **adding positional encoding to word embedding (as opposed to concat them) don't really alter word embedding that much**\n",
@@ -984,7 +1040,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class PositionalEncoding(nn.Module):\n",
@@ -1011,14 +1069,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## BERT vs GPT in term of positional encoding"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- BERT (using **encoder transformer**) doesn't learn much absolute position\n",
     "    - Why? BERT use **masked language modeling** (predict the masked word using its neighbors), therefore the relative position (of the neighbor words) are more important than absolute position\n",
@@ -1621,7 +1683,7 @@
     "width": "355.009px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
